<resources>
    <string name="app_name">Html 5</string>
    <string name="acceder">Iniciar Sesion</string>
    <string name="mas_tarde">Nuevo Usuario</string>
    <string name="usuario">Nombre de Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="error_autenticar">Usuario y/o Contraseña Incorrecto(s)</string>
    <string name="crear">Crear Cuenta</string>
    <string name="name">Nombre:</string>
    <string name="developer_name">Kevin Castillo Antunes</string>
    <string name="university">Universidad:</string>
    <string name="university_name">Universidad Tecnológica del Norte de Guanajuato</string>
    <string name="academic_advisor">Asesor Académico:</string>
    <string name="name_advisor">Anastasio Rodríguez García</string>
    <string name="recomendacion">Se le recomienda al usuario, que para una mejor y mas rapida utilización \n conectece a internet y de esa manera poder utilizar mas y mejores opciones, las cuales solo estan \n disponibles via internet</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="name_user">Nombre del usuario</string>
    <string name="user_name">Kevin Castillo Antunes</string>
    <string name="color_fondo">Tema de fondo</string>
    <string name="lenguage">Idioma</string>
    <string name="nombre">Nombre de Usuario</string>
    <string name="correo">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nuevo">Nuevo</string>
    <string name="agregar">Agregar</string>
    <string name="title_activity_gps">GPS</string>
    <string name="intro_uno">HTML5 es la actualización de HTML, el lenguaje en el que es creada la web. HTML5 también es un termino de marketing para agrupar las nuevas tecnologías de desarrollo de aplicaciones web: HTML5, CSS3 y nuevas capacidades de Javascript</string>
    <string name="intro_dos">La versión anterior y más usada de HTML, HTML4, carece de características necesarias para la creación de aplicaciones modernas basadas en un navegador. El uso fuerte de Javascript ha ayudado a mejorar esto, gracias a frameworks como jQuery, jQuery UI, Sproutcore, entre otros.</string>
    <string name="intro_tres">Flash en especial ha sido usado en reemplazo de HTML para desarrollar web apps que superaran las habilidades de un navegador: Audio, video, webcams, micrófonos, datos binarios, animaciones vectoriales, componentes de interfaz complejos, entre muchas otras cosas. Ahora HTML5 es capaz de hacer esto sin necesidad de plugins y con una gran compatibilidad entre navegadores.</string>
    <string name="intro_cuatro">IMPORTANTE: En este momento no todos los navegadores soportan HTML5 y la mayoría de sus funciones se encuentran actualmente en estado de desarrollo. Recomendamos leer los capítulos y ejecutar los códigos con las últimas versiones de Google Chrome y Firefox. Google Chrome ya implementa muchas de las características de HTML5 y además es una buena plataforma para pruebas. Por otro lado, Firefox es uno de los mejores navegadores para desarrolladores y también provee total soporte para HTML5. Sea cual fuere el navegador elegido, siempre tenga en mente que un buen desarrollador instala y prueba sus códigos en cada programa disponible en el mercado. Ejecute los códigos provistos en este libro en cada uno de los navegadores disponibles. Para descargar las últimas versiones, visite los siguientes enlaces: · www.google.com/chrome · www.apple.com/safari/download www.mozilla.com windows.microsoft.com www.opera.com</string>
    <string name="idioma_ingles">Ingles</string>
    <string name="idioma_español">Español</string>
    <string name="idioma_aleman">Aleman</string>
    <string name="color_blanco">Blanco</string>
    <string name="color_negro">Negro</string>
    <string name="color_rojo">Rojo</string>
    <string name="ayuda_nota">Nota:</string>
    <string name="ayuda_enviar">Enviar</string>
    <string name="bd_id">id</string>
    <string name="bd_nombre">nombre</string>
    <string name="bd_correo">correo</string>
    <string name="bd_contrasena">contraseña</string>
    <string-array name="conteniodo_lo">
        <item>Introducción</item>
        <item>Temario</item>
        <item>Aprendiendo</item>
        <item>Desarrollador</item>
    </string-array>
    <string name="info_componentes_basicos">HTML5 provee básicamente tres características: estructura,
        estilo y funcionalidad. Nunca fue declarado oficialmente pero, incluso cuando algunas APIs
        (Interface de Programación de Aplicaciones). Es por eso que  HTML5 es considerado el producto
        de la combinación de HTML, CSS y Javascript.  Ahora la estructura debe proveer forma,
        organización y flexibilidad, y debe ser tan fuerte como los fundamentos de un edificio.
        Para trabajar y crear sitios webs y aplicaciones con HTML5, necesitamos saber primero cómo
        esa estructura es construida.</string>
    <string name="info_componentes_basicos_Dos">En este primer módulo aprenderá cómo construir una
        plantilla para futuros proyectos usando los nuevos elementos HTML introducidos en HTML5.</string>
    <string name="info_componentes_basicos_Tres">Hágalo usted mismo: Cree un archivo de texto vacío
        utilizando su editor de textos favorito para probar cada código presentado en este capítulo.
        Esto lo ayudará a recordar las nuevas etiquetas HTML y acostumbrarse a ellas. </string>
    <string name="info_componentes_basicos_Cuatro">Conceptos básicos: Un documento HTML es un archivo
        de texto. Si usted no posee ningún programa para desarrollo web, puede simplemente utilizar
        el Bloc de Notas de Windows o cualquier otro editor de textos.</string>
    <string name="info_estructura_global">Los documentos HTML se encuentran estrictamente organizados.
        Cada parte del documento está diferenciada, declarada y determinada por etiquetas específicas.
        En esta parte del capítulo vamos a ver cómo construir la estructura global de un documento
        HTML y los nuevos elementos semánticos incorporados en HTML5.\n\n
        En primer lugar necesitamos indicar el tipo de documento que estamos creando. Esto en HTML5
        es extremadamente sencillo:\n\n
         <![CDATA[ <!DOCTYPE html>]]>\n\n
        Luego de declarar el tipo de documento, debemos comenzar a construir la estructura HTML. Como
        siempre, la estructura tipo árbol de este lenguaje tiene su raíz en el elemento   <![CDATA[<html> ]]>.
        Este elemento envolverá al resto del código: \n\n
              <![CDATA[
         <div>
        <!DOCTYPE html>\n
        <html lang=”es”>\n
        </html>\n\n
        </div>
        ]]>
        Continuemos construyendo nuestra plantilla. El código HTML insertado entre las etiquetas tiene
        que ser dividido entre dos secciones principales. \n\n
        El elemento   <![CDATA[<head>]]> va primero, por supuesto, y al igual que el resto de los elementos
        estructurales tiene una etiqueta de apertura y una de cierre:\n\n

            <![CDATA[<!DOCTYPE html>\n
        <html lang=”es”>\n
        <head>\n\n

        </head>\n
        </html>\n\n
        ]]>
        La siguiente gran sección que es parte principal de la organización de un documento HTML es
        el cuerpo. El cuerpo representa la parte visible de todo documento y es especificado entre
        etiquetas <![CDATA[<body>]]>. Estas etiquetas tampoco han cambiado en relación con versiones previas
        de HTML: \n\n
        <![CDATA[<!DOCTYPE html>\n
        <html lang=”es”>\n
        <head>\n\n

        </head>\n
        <body>\n\n

        </body>\n
        </html>\n\n
        ]]>
        Es momento de construir la cabecera del documento. Algunos cambios e innovaciones fueron
        incorporados dentro de la cabecera, y uno de ellos es la etiqueta que define el juego de
        caracteres a utilizar para mostrar el documento. Ésta es una etiqueta que especifica cómo
        el texto será presentado en pantalla además en HTML5 no es necesario cerrar etiquetas simples
        con una barra al final, pero recomendamos utilizarlas por razones de compatibilidad. El
        anterior código se podría escribir de la siguiente manera:\n\n
<![CDATA[
        <!DOCTYPE html>\n
        <html lang=”es”>\n
        <head>\n
            <meta charset = “iso-8859-1” />\n
            <meta name = “description” content=“Ejemplo de HTML5” />\n
            <meta name = “keywords” content=“HTML5, CSS3, Javascript” />\n\n

        </head>\n
        <body>\n\n

        </body>\n
        </html>\n\n
    ]]>
    La etiqueta <![CDATA[<title>]]>, como siempre, simplemente especifica el título del documento, y no hay nada
    nuevo para comentar:\n\n
    <![CDATA[
    <!DOCTYPE html>\n
        <html lang=”es”>\n
        <head>\n
            <meta charset = “iso-8859-1” />\n
            <meta name = “description” content=“Ejemplo de HTML5” />\n
            <meta name = “keywords” content=“HTML5, CSS3, Javascript” />\n
            <title>Este texto es el título del documento</title>\n\n
        </head>\n
        <body>\n\n

        </body>\n
        </html>\n\n
    ]]>

        Otro importante elemento que va dentro de la cabecera del documento es <![CDATA[<link> ]]> . Este elemento
    es usado para incorporar estilos, códigos Javascript, imágenes o iconos desde archivos externos.
    Uno de los usos más comunes para es la incorporación de archivos con estilos CSS:\n\n
    <![CDATA[
    <!DOCTYPE html>\n
    <html lang=”es”>\n
    <head>\n
        <meta charset = “iso-8859-1” />\n
        <meta name = “description” content=“Ejemplo de HTML5” />\n
        <meta name = “keywords” content=“HTML5, CSS3, Javascript” />\n
        <title>Este texto es el título del documento</title>\n
        <link rel=”stylesheet” href=”misestilos.css”>\n\n
    </head>\n
    <body>\n\n

    </body>\n
    </html>\n\n
 ]]></string>
    <string name="correo_elec">Correro Electrónico</string>
    <string name="nombre_registro">Nombre</string>
    <string name="usuario_reg">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="confirm_contrasenia">Confirmar Contraseña</string>
    <string name="welcome_apli">Bienvenido</string>
    <string name="emptyString" />
    <string name="entra">Entrar</string>
    <string name="usuario_logeo">Usuario</string>
    <string name="contrasenia_log">Contraseña</string>
    <string name="acerca_de">Créditos:</string>
    <string name="el_gran_libro">El gran libro de HTML5 y CSS y Javascript</string>
    <string name="el_guapo_linux">El guapo linux</string>
    <string name="pildoras">pildorasinformaticas</string>
    <string name="algoritmo_libre">Algoritmo Libre</string>
    <string name="webs_html">WebApps HTML5</string>
    <string name="vist_previa">Vista previa del curso</string>
    <string name="guardar_datos">Guardar Datos</string>
</resources>