<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="utng.edu.mx.login.Display"
    android:orientation="vertical"
    android:background="@drawable/fond1"

    >
    <ImageView
        android:layout_width="300px"
        android:layout_height="300px"
        android:src="@drawable/login"
        android:layout_gravity="center"


        />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome_apli"
    android:textSize="30pt"
    android:layout_gravity="center"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emptyString"
        android:id="@+id/txv_usuario_ent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:gravity="center"
        android:textSize="20pt"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entra"
        android:id="@+id/btn_acceder"
        android:layout_gravity="center"
        android:textSize="10pt"
        android:background="@color/colorBotones"
        android:layout_marginTop="30pt"
        />
</LinearLayout>
